<resources>

    <!-- Page Headers -->
    <string name="app_name">Hamlet</string>
    <string name="welcome_msg">Welcome to Hamlet</string>
    <string name="about_us">About Us</string>
    <string name="messages_pg">Messages</string>
    <string name="members_pg">Members</string>


    <string name="register_msg">Register Now!!!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_logout">Sign out</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_out">Sign out</string>
    <string name="action_messages">Messages</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="facebook_app_id">561761400904309</string>
    <string name="fb_login_protocol_scheme">fb561761400904309</string>
    <string name="title_activity_user_profile">User Profile</string>
    <string name="title_activity_about_us">About Us</string>
    <string name="title_activity_contact_us">Contact Us</string>

    <!-- Button text -->
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="loading">Loading..</string>


    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Members</item>
        <item>Gallery</item>
        <item>Messages</item>
        <item>Events</item>
        <item>Promotions</item>
    </string-array>

    <string name="about_us_content">Hamlet has been built as a generic platform for all communities to be able to come together,
        collaborate more efficiently. The main features of this platform would be: \n\n
        \t\t 1. Get notified of upcoming events.\n
        \t\t 2. Chat with Friends from this community. \n
        \t\t 3. Upload and share picture of your community.\n
        \t\t 4. Promote your business and offers. \n
        \t\t 5. Easy communications and contacts of all community members. \n
        \t\t 6. Wish your members on their birthdays and anniversaries.\n
        \t\t and many more exciting features..\n\n\n
        \t\t For more information on using the app and its features, please contact us at: <b>info@technogenie.in</b>.
        We shall be happy to respond back to you at the earliest.
    </string>
    <string name="misc_text">Messages</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Membere Screen Details -->
    <string name="member_name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email_id">Email ID</string>
    <string name="residence_address">Residence Address</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="marriage_anniversary">Marriage Anniversary</string>
    <string name="blood_group">Blood Group</string>

    <string name="membership_id">Membership ID</string>
    <string name="lom_name">LOM Name</string>
    <string name="lom_designation">JCI Designation</string>

    <string name="category">Category</string>
    <string name="products">Products</string>
    <string name="org_name">Organization Name</string>
    <string name="org_designation">Designation</string>
    <string name="org_address">Organization Address</string>
    <string name="website">website</string>
    <string name="education_qualification">Educational Qualification</string>
    <string name="upload_photo">Upload Photo </string>

    <string-array name="business_categories">
        <item></item>
        <item>Arts, crafts, and collectibles</item>
        <item>Baby Products</item>
        <item>Beauty and fragrances</item>
        <item>Books and magazines</item>
        <item>Clothing, accessories, and shoes</item>
        <item>Computers, accessories, and services</item>
        <item>Construction &amp; related products</item>
        <item>Education</item>
        <item>Electronics</item>
        <item>Entertainment and media</item>
        <item>Financial services and products</item>
        <item>Food retail and service</item>
        <item>Gifts and flowers</item>
        <item>Health and personal care</item>
        <item>Home and garden</item>
        <item>Industrial Equipment &amp; Parts</item>
        <item>Jewelry &amp; accessories</item>
        <item>Manufacturing</item>
        <item>Nonprofit</item>
        <item>Packaging</item>
        <item>Pets and animals</item>
        <item>Printing</item>
        <item>Retail  (not elsewhere classified)</item>
        <item>Services - other</item>
        <item>Software</item>
        <item>Sports and outdoors</item>
        <item>Toys and hobbies</item>
        <item>Transport</item>
        <item>Training</item>
        <item>Travel</item>
        <item>Vehicle sales &amp; services</item>
        <item>Others</item>
    </string-array>

</resources>
