<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_messages"
        android:icon="@drawable/ic_notifications_white"
        android:orderInCategory="100"
        android:title="@string/action_messages"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/ic_settings_power_white"
        android:orderInCategory="100"
        android:title="@string/action_sign_out"
        app:showAsAction="always" />
</menu>
