<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/divider"
        android:orientation="vertical"
        android:padding="5dp"
        android:scrollbars="vertical"
        android:showDividers="middle">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/member_name"
            android:textColor="@color/grey"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/member_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="30dp"
            android:background="@drawable/bg_edittext"
            android:ems="20"
            android:inputType="textShortMessage"
            android:padding="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobile_number"
            android:textColor="@color/grey"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/mobile_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="30dp"
            android:background="@drawable/bg_edittext"
            android:ems="20"
            android:inputType="phone"
            android:padding="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_id"
            android:textColor="@color/grey"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/email_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edittext"
            android:ems="20"
            android:inputType="textEmailAddress"
            android:padding="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/residence_address"
            android:textColor="@color/grey"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/residence_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edittext"
            android:inputType="textMultiLine"
            android:lines="5"
            android:gravity="top|start"
            android:padding="2dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_of_birth"
            android:textColor="@color/grey"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/date_of_birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edittext"
            android:ems="10"
            android:inputType="date"
            android:padding="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/marriage_anniversary"
            android:textColor="@color/grey"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/marriage_anniversary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edittext"
            android:ems="10"
            android:inputType="date"
            android:padding="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blood_group"
            android:textColor="@color/grey"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/blood_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="30dp"
            android:background="@drawable/bg_edittext"
            android:ems="20"
            android:inputType="textShortMessage"
            android:padding="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/membership_id"
            android:textColor="@color/grey"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/membership_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="30dp"
            android:background="@drawable/bg_edittext"
            android:ems="20"
            android:inputType="textShortMessage"
            android:padding="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lom_name"
            android:textColor="@color/grey"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/lom_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="30dp"
            android:background="@drawable/bg_edittext"
            android:ems="20"
            android:inputType="textShortMessage"
            android:padding="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lom_designation"
            android:textColor="@color/grey"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/lom_designation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="30dp"
            android:background="@drawable/bg_edittext"
            android:ems="20"
            android:inputType="textShortMessage"
            android:padding="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textColor="@color/grey"
            android:textSize="12sp" />

        <Spinner
            android:id="@+id/business_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="30dp"
            android:background="@drawable/bg_edittext"
            android:ems="20"
            android:inputType="textShortMessage"
            android:padding="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/products"
            android:textColor="@color/grey"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/products"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edittext"
            android:inputType="text|textShortMessage"
            android:padding="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/org_name"
            android:textColor="@color/grey"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/org_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edittext"
            android:inputType="text|textShortMessage"
            android:padding="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/org_designation"
            android:textColor="@color/grey"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/org_designation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edittext"
            android:inputType="text|textShortMessage"
            android:padding="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/org_address"
            android:textColor="@color/grey"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/org_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edittext"
            android:inputType="textMultiLine"
            android:lines="5"
            android:gravity="top|start"
            android:padding="2dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/website"
            android:textColor="@color/grey"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edittext"
            android:inputType="text|textShortMessage"
            android:padding="5dp" />

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/darkgreen"
            android:text="Save"
            android:textColor="@color/white" />
    </LinearLayout>
</ScrollView>

